--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "Αντιμετώπιση ονόματος βάσης δεδομένων ως",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Έκδοση Oracle"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "Όνομα Υπηρεσίας"
             },
-            "ssl": "Χρήση SSL όταν είναι διαθέσιμο"
+            "ssl": "Χρήση SSL όταν είναι διαθέσιμο",
+            "version": {
+              "below": "9i ή κάτω",
+              "above": "9θ παραπάνω"
+            }
           },
           "couchdb": {
             "ssl": "Χρήση SSL/TLS όταν είναι διαθέσιμο"
@@ -1861,8 +1866,9 @@
         "enable_users_to_set_group_by": "Ενεργοποιήστε τους χρήστες για να ορίσετε ομάδα κατά",
         "column_description": "Περιγραφή",
         "enable_users_to_aggregate": "Ενεργοποίηση των χρηστών για ομαδοποίηση",
-        "disable_users_to_sort": "Ενεργοποίηση των χρηστών για ταξινόμηση",
-        "enable_users_to_resize": "Ενεργοποιήστε τους χρήστες για αλλαγή μεγέθους"
+        "enable_users_to_resize": "Ενεργοποιήστε τους χρήστες για αλλαγή μεγέθους",
+        "enable_users_to_sort": "Ενεργοποίηση των χρηστών για ταξινόμηση",
+        "disable_users_to_reorder": "Απενεργοποίηση των χρηστών για αναδιάταξη στηλών"
       },
       "setter_tooltip": {
         "action": "Οι ενέργειές σας στα στοιχεία ενεργοποιούν ερωτήματα, ελέγχουν τα στοιχεία ή καλούν τα δεδομένα στους πόρους σας. Πολλαπλές ενέργειες async θα εκτελεστούν παράλληλα.",
@@ -2161,7 +2167,8 @@
         "enable_users_to_aggregate": "Χρησιμοποιείται για να οριστεί αν οι χρήστες επιτρέπουν ή όχι την εκτέλεση συγκέντρωσης δεδομένων σε αυτή τη στήλη.",
         "enable_users_to_set_group_by": "Χρησιμοποιείται για να ορίσετε αν θα επιτρέπεται ή όχι στους χρήστες να δημιουργήσουν την οθόνη ομαδοποίησης δεδομένων. ",
         "column_description": "Χρησιμοποιείται για να ορίσετε μια περιγραφή αυτής της στήλης",
-        "disable_users_to_sort": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι την αλλαγή της ταξινόμησης αυτής της στήλης. "
+        "enable_users_to_sort": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι την αλλαγή της ταξινόμησης αυτής της στήλης. ",
+        "disable_users_to_reorder": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες θα απενεργοποιήσουν ή όχι την αναδιάταξη των στηλών"
       },
       "setter_option": {
         "fixed": "Σταθερό",
