--- a/apps/builder/src/i18n/locale/pt-PT.json
+++ b/apps/builder/src/i18n/locale/pt-PT.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "Tratar nome do banco de dados como",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Oracle version"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "Nome do Serviço"
             },
-            "ssl": "Usar SSL quando disponível"
+            "ssl": "Usar SSL quando disponível",
+            "version": {
+              "below": "9i or below",
+              "above": "9i above"
+            }
           },
           "couchdb": {
             "ssl": "Usar SSL/TLS quando disponível"
@@ -1861,8 +1866,9 @@
         "enable_users_to_set_group_by": "Enable users to set group by",
         "column_description": "Description",
         "enable_users_to_aggregate": "Enable users to aggregate",
-        "disable_users_to_sort": "Enable users to sort",
-        "enable_users_to_resize": "Enable users to resize"
+        "enable_users_to_resize": "Enable users to resize",
+        "enable_users_to_sort": "Enable users to sort",
+        "disable_users_to_reorder": "Disable users to reorder columns"
       },
       "setter_tooltip": {
         "action": "Suas ações para componentes desencadear consultas, componentes de controle ou chamar os dados em seus recursos. Múltiplas ações async serão executadas em paralelo.",
@@ -2161,7 +2167,8 @@
         "enable_users_to_aggregate": "Used to set whether or not to allow users to perform data aggregation on this column.",
         "enable_users_to_set_group_by": "Used to set whether or not to allow users to set up the data grouping display. ",
         "column_description": "Used to set a description of this column",
-        "disable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. "
+        "enable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. ",
+        "disable_users_to_reorder": "Used to set whether or not disable users to reorder the columns"
       },
       "setter_option": {
         "fixed": "Corrigido",
