--- a/apps/builder/src/i18n/locale/cs-CZ.json
+++ b/apps/builder/src/i18n/locale/cs-CZ.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "Považovat název databáze za",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Verze Oracle"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "Název služby"
             },
-            "ssl": "Použít SSL, pokud je k dispozici"
+            "ssl": "Použít SSL, pokud je k dispozici",
+            "version": {
+              "below": "9i nebo méně",
+              "above": "9i výše"
+            }
           },
           "couchdb": {
             "ssl": "Použít SSL/TLS, pokud je k dispozici"
@@ -1861,8 +1866,9 @@
         "enable_users_to_set_group_by": "Povolit uživatelům nastavit skupinu podle",
         "column_description": "L 343, 22.12.2009, s. 1).",
         "enable_users_to_aggregate": "Povolit uživatelům agregovat",
-        "disable_users_to_sort": "Povolit řazení uživatelů",
-        "enable_users_to_resize": "Povolit uživatelům změnit velikost"
+        "enable_users_to_resize": "Povolit uživatelům změnit velikost",
+        "enable_users_to_sort": "Povolit řazení uživatelů",
+        "disable_users_to_reorder": "Zakázat uživatele pro změnu pořadí sloupců"
       },
       "setter_tooltip": {
         "action": "Vaše akce pro komponenty spouštějí dotazy, ovládají komponenty nebo volají data ve vašich zdrojích. Více asynchronních akcí bude provedeno souběžně.",
@@ -2161,7 +2167,8 @@
         "enable_users_to_aggregate": "Slouží k nastavení, zda umožnit nebo neumožnit uživatelům provést agregaci údajů v tomto sloupci.",
         "enable_users_to_set_group_by": "Nastavení, zda povolit nebo nepovolit uživatelům nastavení zobrazení skupiny dat. ",
         "column_description": "Slouží k nastavení popisu tohoto sloupce",
-        "disable_users_to_sort": "Slouží k nastavení, zda povolit nebo nepovolit uživatelům změnit řazení tohoto sloupce. "
+        "enable_users_to_sort": "Slouží k nastavení, zda povolit nebo nepovolit uživatelům změnit řazení tohoto sloupce. ",
+        "disable_users_to_reorder": "Slouží k nastavení, zda zakázat uživatele pro změnu pořadí sloupců"
       },
       "setter_option": {
         "fixed": "Fixní",
