--- a/apps/builder/src/i18n/locale/de-DE.json
+++ b/apps/builder/src/i18n/locale/de-DE.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "Datenbankname behandeln als",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Oracle-Version"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "Dienstname"
             },
-            "ssl": "SSL verwenden, wenn verfügbar"
+            "ssl": "SSL verwenden, wenn verfügbar",
+            "version": {
+              "below": "9i oder darunter",
+              "above": "9 i oben"
+            }
           },
           "couchdb": {
             "ssl": "SSL/TLS verwenden, wenn verfügbar"
@@ -1861,8 +1866,9 @@
         "enable_users_to_set_group_by": "Benutzern erlauben, Gruppe zu setzen von",
         "column_description": "Beschreibung",
         "enable_users_to_aggregate": "Benutzer zum Sammeln aktivieren",
-        "disable_users_to_sort": "Benutzer zum Sortieren aktivieren",
-        "enable_users_to_resize": "Benutzer können die Größe ändern"
+        "enable_users_to_resize": "Benutzer können die Größe ändern",
+        "enable_users_to_sort": "Benutzer zum Sortieren aktivieren",
+        "disable_users_to_reorder": "Benutzer deaktivieren, um Spalten neu zu sortieren"
       },
       "setter_tooltip": {
         "action": "Ihre Aktionen zu Komponenten lösen Abfragen, Steuerkomponenten aus oder rufen die Daten in Ihren Ressourcen auf. Mehrere async-Aktionen werden parallel ausgeführt.",
@@ -2161,7 +2167,8 @@
         "enable_users_to_aggregate": "Wird verwendet, um festzulegen, ob Benutzer die Daten-Aggregation in dieser Spalte durchführen können oder nicht.",
         "enable_users_to_set_group_by": "Wird verwendet, um festzulegen, ob Benutzer die Anzeige für die Datengruppierung einrichten können oder nicht. ",
         "column_description": "Wird verwendet, um eine Beschreibung dieser Spalte zu setzen",
-        "disable_users_to_sort": "Wird verwendet, um festzulegen, ob Benutzer die Sortierung dieser Spalte ändern können oder nicht. "
+        "enable_users_to_sort": "Wird verwendet, um festzulegen, ob Benutzer die Sortierung dieser Spalte ändern können oder nicht. ",
+        "disable_users_to_reorder": "Wird verwendet, um festzulegen, ob Benutzer zum Neuordnen der Spalten deaktiviert werden"
       },
       "setter_option": {
         "fixed": "Feste",
