--- a/apps/builder/src/i18n/locale/ko-KR.json
+++ b/apps/builder/src/i18n/locale/ko-KR.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "데이터베이스 이름",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Oracle version"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "서비스 명"
             },
-            "ssl": "가능한 경우 SSL 사용"
+            "ssl": "가능한 경우 SSL 사용",
+            "version": {
+              "below": "9i or below",
+              "above": "9i above"
+            }
           },
           "couchdb": {
             "ssl": "가능한 경우 SSL/TLS 사용"
@@ -1861,8 +1866,9 @@
         "enable_users_to_set_group_by": "Enable users to set group by",
         "column_description": "Description",
         "enable_users_to_aggregate": "Enable users to aggregate",
-        "disable_users_to_sort": "Enable users to sort",
-        "enable_users_to_resize": "Enable users to resize"
+        "enable_users_to_resize": "Enable users to resize",
+        "enable_users_to_sort": "Enable users to sort",
+        "disable_users_to_reorder": "Disable users to reorder columns"
       },
       "setter_tooltip": {
         "action": "구성 요소에 대한 작업은 쿼리, 구성 요소 조작 또는 리소스의 데이터 호출과 같은 작업을 트리거합니다. 여러 비동기 작업이 병렬로 실행됩니다.",
@@ -2161,7 +2167,8 @@
         "enable_users_to_aggregate": "Used to set whether or not to allow users to perform data aggregation on this column.",
         "enable_users_to_set_group_by": "Used to set whether or not to allow users to set up the data grouping display. ",
         "column_description": "Used to set a description of this column",
-        "disable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. "
+        "enable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. ",
+        "disable_users_to_reorder": "Used to set whether or not disable users to reorder the columns"
       },
       "setter_option": {
         "fixed": "고정 높이",
