--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -210,7 +210,8 @@
           },
           "oracle": {
             "sid": "Считать имя базы данных как",
-            "ssl": "SSL"
+            "ssl": "SSL",
+            "version": "Версия Oracle"
           },
           "couchdb": {
             "ssl": "SSL/TLS"
@@ -359,7 +360,11 @@
               "sid": "SID",
               "service": "Имя сервиса"
             },
-            "ssl": "Использовать SSL при наличии"
+            "ssl": "Использовать SSL при наличии",
+            "version": {
+              "below": "9i или ниже",
+              "above": "9i выше"
+            }
           },
           "couchdb": {
             "ssl": "Использовать SSL/TLS при наличии"
@@ -1861,8 +1866,9 @@
         "enable_users_to_set_group_by": "Разрешить пользователям устанавливать группу по",
         "column_description": "Описание",
         "enable_users_to_aggregate": "Разрешить пользователям объединять",
-        "disable_users_to_sort": "Разрешить сортировку пользователей",
-        "enable_users_to_resize": "Разрешить пользователям изменять размер"
+        "enable_users_to_resize": "Разрешить пользователям изменять размер",
+        "enable_users_to_sort": "Разрешить сортировку пользователей",
+        "disable_users_to_reorder": "Отключить пользователей для изменения порядка столбцов"
       },
       "setter_tooltip": {
         "action": "Ваши действия для компонентов триггерные запросы, контрольные компоненты или вызов данных в ваших ресурсах. Несколько асинхронных действий будут выполняться параллельно.",
@@ -2161,7 +2167,8 @@
         "enable_users_to_aggregate": "Используется для установки разрешения пользователям выполнять агрегацию данных в этом столбце.",
         "enable_users_to_set_group_by": "Используется для установки разрешения пользователям настраивать отображение группировки данных. ",
         "column_description": "Используется для установки описания этого столбца",
-        "disable_users_to_sort": "Используется для установки разрешения пользователям изменять сортировку этого столбца. "
+        "enable_users_to_sort": "Используется для установки разрешения пользователям изменять сортировку этого столбца. ",
+        "disable_users_to_reorder": "Используется для установки отключения пользователей для изменения порядка колонок"
       },
       "setter_option": {
         "fixed": "Исправлено",
