--- a/apps/builder/src/i18n/locale/da-DK.json
+++ b/apps/builder/src/i18n/locale/da-DK.json
@@ -1203,7 +1203,8 @@
           "tooltips": "Understøtter objekter eller primitive værdier. Eksempel: { count: 0 }",
           "placeholder": "{{ { count: 0 }}}"
         }
-      }
+      },
+      "library": "Libraries"
     },
     "deploy": {
       "fail": "Mislykkedes at implementere"
@@ -1868,7 +1869,9 @@
         "enable_users_to_aggregate": "Aktivér brugere for at aggregere",
         "enable_users_to_resize": "Aktivér brugere for at ændre størrelse",
         "enable_users_to_sort": "Gør det muligt for brugere at sortere",
-        "disable_users_to_reorder": "Deaktivér brugere for at omarrangere kolonner"
+        "disable_users_to_reorder": "Deaktivér brugere for at omarrangere kolonner",
+        "locale": "Landestandard",
+        "default_width": "Default width"
       },
       "setter_tooltip": {
         "action": "Dine handlinger til komponenter udløser forespørgsler, styrer komponenter eller kalder data i dine ressourcer. Flere async handlinger vil blive udført parallelt.",
@@ -2168,7 +2171,10 @@
         "enable_users_to_set_group_by": "Bruges til at angive, om brugere skal tillade brugere at opsætte skærmen med datagruppering. ",
         "column_description": "Bruges til at angive en beskrivelse af denne kolonne",
         "enable_users_to_sort": "Bruges til at angive, om brugere kan ændre sorteringen af denne kolonne. ",
-        "disable_users_to_reorder": "Bruges til at angive, om brugere skal deaktivere eller ej for at omarrangere kolonnerne"
+        "disable_users_to_reorder": "Bruges til at angive, om brugere skal deaktivere eller ej for at omarrangere kolonnerne",
+        "locale": "For eksempel en-US",
+        "default_width": "Bruges til at indstille standardbredden af kolonnen",
+        "max_count": "Bruges til at indstille maks antal stjerner"
       },
       "setter_option": {
         "fixed": "Fast",
