--- a/apps/builder/src/i18n/locale/de-DE.json
+++ b/apps/builder/src/i18n/locale/de-DE.json
@@ -1203,7 +1203,8 @@
           "tooltips": "Unterstützt Objekte oder primitive Werte. Beispiel: { count: 0 }",
           "placeholder": "{{ { count: 0 }}}"
         }
-      }
+      },
+      "library": "Libraries"
     },
     "deploy": {
       "fail": "Deploy fehlgeschlagen"
@@ -1868,7 +1869,9 @@
         "enable_users_to_aggregate": "Benutzer zum Sammeln aktivieren",
         "enable_users_to_resize": "Benutzer können die Größe ändern",
         "enable_users_to_sort": "Benutzer zum Sortieren aktivieren",
-        "disable_users_to_reorder": "Benutzer deaktivieren, um Spalten neu zu sortieren"
+        "disable_users_to_reorder": "Benutzer deaktivieren, um Spalten neu zu sortieren",
+        "locale": "Lokal",
+        "default_width": "Default width"
       },
       "setter_tooltip": {
         "action": "Ihre Aktionen zu Komponenten lösen Abfragen, Steuerkomponenten aus oder rufen die Daten in Ihren Ressourcen auf. Mehrere async-Aktionen werden parallel ausgeführt.",
@@ -2168,7 +2171,10 @@
         "enable_users_to_set_group_by": "Wird verwendet, um festzulegen, ob Benutzer die Anzeige für die Datengruppierung einrichten können oder nicht. ",
         "column_description": "Wird verwendet, um eine Beschreibung dieser Spalte zu setzen",
         "enable_users_to_sort": "Wird verwendet, um festzulegen, ob Benutzer die Sortierung dieser Spalte ändern können oder nicht. ",
-        "disable_users_to_reorder": "Wird verwendet, um festzulegen, ob Benutzer zum Neuordnen der Spalten deaktiviert werden"
+        "disable_users_to_reorder": "Wird verwendet, um festzulegen, ob Benutzer zum Neuordnen der Spalten deaktiviert werden",
+        "locale": "Zum Beispiel de-US",
+        "default_width": "Verwendet um die Standardbreite der Spalte zu setzen",
+        "max_count": "Verwendet um die maximale Anzahl von Sternen zu setzen"
       },
       "setter_option": {
         "fixed": "Feste",
