--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -1203,7 +1203,8 @@
           "tooltips": "Υποστηρίζει αντικείμενα ή πρωτόγονες τιμές. Παράδειγμα: { count: 0 }",
           "placeholder": "{Şos. { count: 0 }}}"
         }
-      }
+      },
+      "library": "Libraries"
     },
     "deploy": {
       "fail": "Αποτυχία ανάπτυξης"
@@ -1868,7 +1869,9 @@
         "enable_users_to_aggregate": "Ενεργοποίηση των χρηστών για ομαδοποίηση",
         "enable_users_to_resize": "Ενεργοποιήστε τους χρήστες για αλλαγή μεγέθους",
         "enable_users_to_sort": "Ενεργοποίηση των χρηστών για ταξινόμηση",
-        "disable_users_to_reorder": "Απενεργοποίηση των χρηστών για αναδιάταξη στηλών"
+        "disable_users_to_reorder": "Απενεργοποίηση των χρηστών για αναδιάταξη στηλών",
+        "locale": "Τοπική",
+        "default_width": "Default width"
       },
       "setter_tooltip": {
         "action": "Οι ενέργειές σας στα στοιχεία ενεργοποιούν ερωτήματα, ελέγχουν τα στοιχεία ή καλούν τα δεδομένα στους πόρους σας. Πολλαπλές ενέργειες async θα εκτελεστούν παράλληλα.",
@@ -2168,7 +2171,10 @@
         "enable_users_to_set_group_by": "Χρησιμοποιείται για να ορίσετε αν θα επιτρέπεται ή όχι στους χρήστες να δημιουργήσουν την οθόνη ομαδοποίησης δεδομένων. ",
         "column_description": "Χρησιμοποιείται για να ορίσετε μια περιγραφή αυτής της στήλης",
         "enable_users_to_sort": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι την αλλαγή της ταξινόμησης αυτής της στήλης. ",
-        "disable_users_to_reorder": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες θα απενεργοποιήσουν ή όχι την αναδιάταξη των στηλών"
+        "disable_users_to_reorder": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες θα απενεργοποιήσουν ή όχι την αναδιάταξη των στηλών",
+        "locale": "For example, el-GR",
+        "default_width": "Χρησιμοποιείται για τον ορισμό του προεπιλεγμένου πλάτους της στήλης",
+        "max_count": "Χρησιμοποιείται για τον ορισμό του μέγιστου αριθμού αστεριών"
       },
       "setter_option": {
         "fixed": "Σταθερό",
