--- a/apps/builder/src/i18n/locale/ja-JP.json
+++ b/apps/builder/src/i18n/locale/ja-JP.json
@@ -1203,7 +1203,8 @@
           "tooltips": "オブジェクトまたはプリミティブ値をサポートします。 例: { カウント: 0 }",
           "placeholder": "{ count: 0 }"
         }
-      }
+      },
+      "library": "Libraries"
     },
     "deploy": {
       "fail": "展開に失敗しました"
@@ -1868,7 +1869,9 @@
         "enable_users_to_aggregate": "ユーザーの集計を有効にする",
         "enable_users_to_resize": "ユーザーのサイズ変更を有効にする",
         "enable_users_to_sort": "ユーザーの並び替えを有効にする",
-        "disable_users_to_reorder": "列の並び替えを無効にする"
+        "disable_users_to_reorder": "列の並び替えを無効にする",
+        "locale": "ロケール",
+        "default_width": "Default width"
       },
       "setter_tooltip": {
         "action": "コンポーネントに対するアクションは、クエリ、コンポーネントの操作、リソース内のデータの呼び出しなどのアクションをトリガーします。複数の非同期操作が並行して実行されます。",
@@ -2168,7 +2171,10 @@
         "enable_users_to_set_group_by": "ユーザーがデータグループ表示を設定できるようにするかどうかを設定します。 ",
         "column_description": "この列の説明を設定するために使用",
         "enable_users_to_sort": "この列の並べ替えを変更するかどうかを設定します。 ",
-        "disable_users_to_reorder": "列の順序を変更するためにユーザーを無効にするかどうかを設定するために使用"
+        "disable_users_to_reorder": "列の順序を変更するためにユーザーを無効にするかどうかを設定するために使用",
+        "locale": "例: ja-JP",
+        "default_width": "列の既定の幅を設定するために使用",
+        "max_count": "星の最大数を設定するために使用"
       },
       "setter_option": {
         "fixed": "固定高さ",
