--- a/apps/builder/src/i18n/locale/ru-RU.json
+++ b/apps/builder/src/i18n/locale/ru-RU.json
@@ -1203,7 +1203,8 @@
           "tooltips": "Поддерживает объекты или примитивные значения. Пример: { count: 0 }",
           "placeholder": "{{ { count: 0 }}}"
         }
-      }
+      },
+      "library": "Libraries"
     },
     "deploy": {
       "fail": "Не удалось развернуть"
@@ -1868,7 +1869,9 @@
         "enable_users_to_aggregate": "Разрешить пользователям объединять",
         "enable_users_to_resize": "Разрешить пользователям изменять размер",
         "enable_users_to_sort": "Разрешить сортировку пользователей",
-        "disable_users_to_reorder": "Отключить пользователей для изменения порядка столбцов"
+        "disable_users_to_reorder": "Отключить пользователей для изменения порядка столбцов",
+        "locale": "Язык",
+        "default_width": "Default width"
       },
       "setter_tooltip": {
         "action": "Ваши действия для компонентов триггерные запросы, контрольные компоненты или вызов данных в ваших ресурсах. Несколько асинхронных действий будут выполняться параллельно.",
@@ -2168,7 +2171,10 @@
         "enable_users_to_set_group_by": "Используется для установки разрешения пользователям настраивать отображение группировки данных. ",
         "column_description": "Используется для установки описания этого столбца",
         "enable_users_to_sort": "Используется для установки разрешения пользователям изменять сортировку этого столбца. ",
-        "disable_users_to_reorder": "Используется для установки отключения пользователей для изменения порядка колонок"
+        "disable_users_to_reorder": "Используется для установки отключения пользователей для изменения порядка колонок",
+        "locale": "Например, ru-US",
+        "default_width": "Используется для установки ширины столбца по умолчанию",
+        "max_count": "Используется для максимального количества звёзд"
       },
       "setter_option": {
         "fixed": "Исправлено",
