--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -2784,7 +2784,7 @@
         "prompt": "Please enter the prompt",
         "description": "Please enter the description",
         "icon": "Please upload or generate an icon",
-        "variable_value": "Please enter a value as an example. ",
+        "variable_value": "Please ensure that both the key and value are either empty or not empty.",
         "variable_key": "Please enter the key or delete the value. ",
         "temperature": "Please enter the temperature between 0.1 to 2",
         "max_token": "Please enter the max token not less than 1"
@@ -2795,6 +2795,10 @@
       "value_invalid": {
         "temperature": "Please enter the temperature between 0.1 to 2",
         "max_token": "Please enter the max token not less than 1"
+      },
+      "group": {
+        "advanced_settings": "Advanced settings",
+        "information": "Basic information"
       }
     },
     "common": {
