--- a/apps/builder/src/i18n/locale/da-DK.json
+++ b/apps/builder/src/i18n/locale/da-DK.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "Godkendelse"
-          }
+          },
+          "old_oracle": "9i eller derunder",
+          "new_oracle": "9i over"
         },
         "placeholder": {
           "url": "Angiv forespørgsels-URL her",
@@ -1204,7 +1206,10 @@
           "placeholder": "{{ { count: 0 }}}"
         }
       },
-      "library": "Libraries"
+      "library": "Biblioteker",
+      "component_layer": {
+        "floating": "Modal"
+      }
     },
     "deploy": {
       "fail": "Mislykkedes at implementere"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Vælg menupunkt",
           "pageChange": "Side ændring",
           "clickItem": "Klik på element",
-          "columnVisibilityChange": "Ændring af søjlesynlighed"
+          "columnVisibilityChange": "Ændring af søjlesynlighed",
+          "onPaginationModelChange": "Side ændring",
+          "onRefresh": "Opdater",
+          "onFilterModelChange": "Filtrer ændring",
+          "onRowSelectionModelChange": "Ændring af række valg",
+          "onColumnVisibilityModel": "Ændring af søjlesynlighed",
+          "onSortModelChange": "Sorter ændring"
         },
         "image_list": {
           "title": "Billeder",
@@ -1342,7 +1353,10 @@
         "refresh": "opfrisk",
         "density_setting": "Tæthed",
         "column_setting": "Kolonner",
-        "refresh_setting": "Opdater"
+        "refresh_setting": "Opdater",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Sorter ændring"
+        }
       },
       "setter_default_value": {
         "fill": "Udfyld",
@@ -1760,7 +1774,8 @@
           "cell_selection": "Valg af celler",
           "click_outside_to_des": "Klik udenfor for at fravælge",
           "page": "Standard sideindeks",
-          "export_all_data_setting": "Eksporter alle"
+          "export_all_data_setting": "Eksporter alle",
+          "locale": "Landestandard"
         },
         "previous_cursor": "Forrige markør",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Aktivér brugere for at ændre størrelse",
         "enable_users_to_sort": "Gør det muligt for brugere at sortere",
         "disable_users_to_reorder": "Deaktivér brugere for at omarrangere kolonner",
-        "locale": "Landestandard",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Hurtigt filter",
+        "exclude_hidden_columns": "Udeluk skjulte kolonner",
+        "allow_users_select": "Tillad valg af række"
       },
       "setter_tooltip": {
         "action": "Dine handlinger til komponenter udløser forespørgsler, styrer komponenter eller kalder data i dine ressourcer. Flere async handlinger vil blive udført parallelt.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Indstil afsenderens avatar. For eksempel, i din datakilde, afsenderen avatar er sendAvatar feltet og du kan indstille feltet til {{item.sendAvatar}}.",
         "receiving": "Angiv, om der skal vises indlæsning, når der modtages beskeder. Hvis din besked er modtaget fra action1, kan du indstille den til {{action1.isRunning}}, og indlæsningsstatus vil blive vist, når action1 kører.",
         "export_setting": "Bruges til at angive, om brugere har tilladelse til at eksportere filtrerede data.",
-        "filter_setting": "Bruges til at angive, om filtre skal vises eller ej, så brugerne kan filtrere data i tabellen."
+        "filter_setting": "Bruges til at angive, om filtre skal vises eller ej, så brugerne kan filtrere data i tabellen.",
+        "quick_filter_setting": "Bruges til at indstille om hurtigfilter skal aktiveres",
+        "exclude_hidden_columns": "Bruges til at angive, om de skjulte kolonner skal lukkes, når du bruger hurtigfilter. "
       },
       "tab_title": "Inspicer",
       "unselected_tip1": "Ingen komponenter valgt.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "Understøttet i rækken enkelt markeringstilstand. Når du har aktiveret det, skal du klikke på et andet område end tabellen for at fravælge rækken.",
           "density_setting": "Bruges til at indstille rækkens højde tæthed eller ej. ",
           "refresh_setting": "Bruges til at angive, om et opfrisk ikon skal vises",
-          "export_raw_data_setting": "Bruges til at angive, om brugere har tilladelse til at eksportere ufiltrerede rådata."
+          "export_raw_data_setting": "Bruges til at angive, om brugere har tilladelse til at eksportere ufiltrerede rådata.",
+          "locale": "For eksempel en-US"
         },
         "previous_cursor": "Brug handlingsdata til at indstille den forrige markør. For eksempel  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Bruges til at angive en beskrivelse af denne kolonne",
         "enable_users_to_sort": "Bruges til at angive, om brugere kan ændre sorteringen af denne kolonne. ",
         "disable_users_to_reorder": "Bruges til at angive, om brugere skal deaktivere eller ej for at omarrangere kolonnerne",
-        "locale": "For eksempel en-US",
         "default_width": "Bruges til at indstille standardbredden af kolonnen",
-        "max_count": "Bruges til at indstille maks antal stjerner"
+        "max_count": "Bruges til at indstille maks antal stjerner",
+        "allow_users_select": "Bruges til at angive, om det er tilladt brugere at vælge række. "
       },
       "setter_option": {
         "fixed": "Fast",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Chat",
         "text-generation": "Tekst generation"
-      }
+      },
+      "validation_blank": {
+        "name": "Indtast et navn",
+        "prompt": "Indtast venligst prompten",
+        "description": "Indtast venligst beskrivelsen",
+        "icon": "Upload eller generér et ikon",
+        "variable_value": "Sørg for, at både nøglen og værdien er tom eller ikke tom.",
+        "variable_key": "Indtast nøglen eller slet værdien. ",
+        "temperature": "Indtast venligst temperaturen mellem 0,1 og 2",
+        "max_token": "Indtast venligst den maksimale token ikke mindre end 1"
+      },
+      "length_invalid": {
+        "description": "Begræns antallet af tegn til 160 eller mindre"
+      },
+      "value_invalid": {
+        "temperature": "Indtast venligst temperaturen mellem 0,1 og 2",
+        "max_token": "Indtast venligst den maksimale token ikke mindre end 1"
+      },
+      "group": {
+        "advanced_settings": "Avancerede indstillinger",
+        "information": "Grundlæggende oplysninger"
+      },
+      "doc": "Doc"
     },
     "common": {
       "required": "Påkrævet"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "Ingen adgangstilladelse"
-  }
+  },
+  "show_states": "Vis tilstande"
 }
