--- a/apps/builder/src/i18n/locale/el-GR.json
+++ b/apps/builder/src/i18n/locale/el-GR.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "Ταυτοποίηση"
-          }
+          },
+          "old_oracle": "9i ή κάτω",
+          "new_oracle": "9θ παραπάνω"
         },
         "placeholder": {
           "url": "Εισάγετε εδώ το URL αιτήματος",
@@ -1204,7 +1206,10 @@
           "placeholder": "{Şos. { count: 0 }}}"
         }
       },
-      "library": "Libraries"
+      "library": "Βιβλιοθήκες",
+      "component_layer": {
+        "floating": "Μοντάλ"
+      }
     },
     "deploy": {
       "fail": "Αποτυχία ανάπτυξης"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Επιλέξτε στοιχείο μενού",
           "pageChange": "Αλλαγή σελίδας",
           "clickItem": "Κάντε κλικ στο στοιχείο",
-          "columnVisibilityChange": "Αλλαγή ορατότητας στήλης"
+          "columnVisibilityChange": "Αλλαγή ορατότητας στήλης",
+          "onPaginationModelChange": "Αλλαγή σελίδας",
+          "onRefresh": "Ανανέωση",
+          "onFilterModelChange": "Αλλαγή φίλτρου",
+          "onRowSelectionModelChange": "Αλλαγή γραμμής επιλογής",
+          "onColumnVisibilityModel": "Αλλαγή ορατότητας στήλης",
+          "onSortModelChange": "Αλλαγή ταξινόμησης"
         },
         "image_list": {
           "title": "Εικόνες",
@@ -1342,7 +1353,10 @@
         "refresh": "ανανέωση",
         "density_setting": "Πυκνότητα",
         "column_setting": "Στήλες",
-        "refresh_setting": "Ανανέωση"
+        "refresh_setting": "Ανανέωση",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Αλλαγή ταξινόμησης"
+        }
       },
       "setter_default_value": {
         "fill": "Γέμισμα",
@@ -1760,7 +1774,8 @@
           "cell_selection": "Επιλογή κελιού",
           "click_outside_to_des": "Κάντε κλικ έξω για να αποεπιλέξετε",
           "page": "Προεπιλεγμένο ευρετήριο σελίδας",
-          "export_all_data_setting": "Εξαγωγή όλων"
+          "export_all_data_setting": "Εξαγωγή όλων",
+          "locale": "Τοπική"
         },
         "previous_cursor": "Προηγούμενος δρομέας",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Ενεργοποιήστε τους χρήστες για αλλαγή μεγέθους",
         "enable_users_to_sort": "Ενεργοποίηση των χρηστών για ταξινόμηση",
         "disable_users_to_reorder": "Απενεργοποίηση των χρηστών για αναδιάταξη στηλών",
-        "locale": "Τοπική",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Γρήγορο φίλτρο",
+        "exclude_hidden_columns": "Εξαίρεση κρυφών στηλών",
+        "allow_users_select": "Επιτρέπεται η επιλογή γραμμής"
       },
       "setter_tooltip": {
         "action": "Οι ενέργειές σας στα στοιχεία ενεργοποιούν ερωτήματα, ελέγχουν τα στοιχεία ή καλούν τα δεδομένα στους πόρους σας. Πολλαπλές ενέργειες async θα εκτελεστούν παράλληλα.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Ορίστε το avatar του αποστολέα. Για παράδειγμα, στην πηγή δεδομένων σας, το avatar του αποστολέα είναι το πεδίο sendAvatar και μπορείτε να ορίσετε το πεδίο σε {{item.sendAvatar}}.",
         "receiving": "Ορίστε αν θα εμφανίζεται η φόρτωση κατά τη λήψη μηνυμάτων. Εάν το μήνυμά σας λαμβάνεται από την ενέργεια1, μπορείτε να το ορίσετε σε {{action1.isRunning}}, και η κατάσταση φόρτωσης θα εμφανιστεί όταν εκτελείται η ενέργεια1.",
         "export_setting": "Χρησιμοποιείται για να οριστεί αν οι χρήστες επιτρέπεται ή όχι να εξάγουν φιλτραρισμένα δεδομένα.",
-        "filter_setting": "Χρησιμοποιείται για να ορίσετε αν θα εμφανίζονται ή όχι τα φίλτρα, επιτρέποντας στους χρήστες να φιλτράρουν τα δεδομένα στον πίνακα."
+        "filter_setting": "Χρησιμοποιείται για να ορίσετε αν θα εμφανίζονται ή όχι τα φίλτρα, επιτρέποντας στους χρήστες να φιλτράρουν τα δεδομένα στον πίνακα.",
+        "quick_filter_setting": "Χρησιμοποιείται για να οριστεί αν θα ενεργοποιηθεί το γρήγορο φίλτρο",
+        "exclude_hidden_columns": "Χρησιμοποιείται για να ορίσετε αν θα αποσυμπιέσετε τις κρυφές στήλες όταν χρησιμοποιείτε γρήγορο φίλτρο. "
       },
       "tab_title": "Επιθεώρηση",
       "unselected_tip1": "Δεν επιλέχθηκαν εξαρτήματα.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "Υποστηρίζεται στη γραμμή μονής επιλογής. Μετά την ενεργοποίησή της, κάντε κλικ σε μια περιοχή διαφορετική από τον πίνακα για να αποεπιλέξετε τη γραμμή.",
           "density_setting": "Χρησιμοποιείται για τον ορισμό της πυκνότητας του ύψους της γραμμής ή όχι. ",
           "refresh_setting": "Χρησιμοποιείται για να ορίσετε αν θα εμφανίζεται ένα εικονίδιο ανανέωσης",
-          "export_raw_data_setting": "Χρησιμοποιείται για να οριστεί αν οι χρήστες επιτρέπεται να εξάγουν μη φιλτραρισμένα ακατέργαστα δεδομένα."
+          "export_raw_data_setting": "Χρησιμοποιείται για να οριστεί αν οι χρήστες επιτρέπεται να εξάγουν μη φιλτραρισμένα ακατέργαστα δεδομένα.",
+          "locale": "For example, el-GR"
         },
         "previous_cursor": "Χρησιμοποιήστε τα δεδομένα ενέργειας για να ορίσετε τον προηγούμενο δρομέα. Για παράδειγμα,  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Χρησιμοποιείται για να ορίσετε μια περιγραφή αυτής της στήλης",
         "enable_users_to_sort": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες επιτρέπουν ή όχι την αλλαγή της ταξινόμησης αυτής της στήλης. ",
         "disable_users_to_reorder": "Χρησιμοποιείται για να ορίσετε αν οι χρήστες θα απενεργοποιήσουν ή όχι την αναδιάταξη των στηλών",
-        "locale": "For example, el-GR",
         "default_width": "Χρησιμοποιείται για τον ορισμό του προεπιλεγμένου πλάτους της στήλης",
-        "max_count": "Χρησιμοποιείται για τον ορισμό του μέγιστου αριθμού αστεριών"
+        "max_count": "Χρησιμοποιείται για τον ορισμό του μέγιστου αριθμού αστεριών",
+        "allow_users_select": "Χρησιμοποιείται για να ορίσετε αν επιτρέπεται στους χρήστες να επιλέξουν γραμμή. "
       },
       "setter_option": {
         "fixed": "Σταθερό",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Συνομιλία",
         "text-generation": "Δημιουργία κειμένου"
-      }
+      },
+      "validation_blank": {
+        "name": "Παρακαλώ εισάγετε ένα όνομα",
+        "prompt": "Παρακαλώ εισάγετε την προτροπή",
+        "description": "Παρακαλώ εισάγετε την περιγραφή",
+        "icon": "Παρακαλώ ανεβάστε ή δημιουργήστε ένα εικονίδιο",
+        "variable_value": "Βεβαιωθείτε ότι τόσο το κλειδί όσο και η τιμή είναι είτε κενά ή δεν είναι κενά.",
+        "variable_key": "Παρακαλώ εισάγετε το κλειδί ή διαγράψτε την τιμή. ",
+        "temperature": "Παρακαλώ εισάγετε τη θερμοκρασία από 0.1 έως 2",
+        "max_token": "Παρακαλώ εισάγετε το μέγιστο διακριτικό όχι λιγότερο από 1"
+      },
+      "length_invalid": {
+        "description": "Παρακαλώ περιορίστε τον αριθμό χαρακτήρων σε 160 ή λιγότερο"
+      },
+      "value_invalid": {
+        "temperature": "Παρακαλώ εισάγετε τη θερμοκρασία από 0.1 έως 2",
+        "max_token": "Παρακαλώ εισάγετε το μέγιστο διακριτικό όχι λιγότερο από 1"
+      },
+      "group": {
+        "advanced_settings": "Ρυθμίσεις για προχωρημένους",
+        "information": "Βασικές πληροφορίες"
+      },
+      "doc": "Έγγραφο"
     },
     "common": {
       "required": "Απαιτείται"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "Δεν υπάρχει δικαίωμα πρόσβασης"
-  }
+  },
+  "show_states": "Εμφάνιση πολιτειών"
 }
