--- a/apps/builder/src/i18n/locale/en-US.json
+++ b/apps/builder/src/i18n/locale/en-US.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "Authentication"
-          }
+          },
+          "old_oracle": "9i or below",
+          "new_oracle": "9i above"
         },
         "placeholder": {
           "url": "Enter request URL here",
@@ -1204,7 +1206,10 @@
           "placeholder": "{{ { count: 0 } }}"
         }
       },
-      "library": "Libraries"
+      "library": "Libraries",
+      "component_layer": {
+        "floating": "Modal"
+      }
     },
     "deploy": {
       "fail": "Failed to deploy"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Select menu item",
           "pageChange": "Page change",
           "clickItem": "Click item",
-          "columnVisibilityChange": "Column visibility change"
+          "columnVisibilityChange": "Column visibility change",
+          "onPaginationModelChange": "Page change",
+          "onRefresh": "Refresh",
+          "onFilterModelChange": "Filter change",
+          "onRowSelectionModelChange": "Row selection change",
+          "onColumnVisibilityModel": "Column visibility change",
+          "onSortModelChange": "Sort change"
         },
         "image_list": {
           "title": "Images",
@@ -1342,7 +1353,10 @@
         "refresh": "Refresh",
         "density_setting": "Density",
         "column_setting": "Columns",
-        "refresh_setting": "Refresh"
+        "refresh_setting": "Refresh",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Sort change"
+        }
       },
       "setter_default_value": {
         "fill": "Fill",
@@ -1543,8 +1557,8 @@
         "new_tab": "New tab",
         "only_run_when": "Only run when",
         "overFlow": "OverFlow",
-        "page": "Page",
-        "pageSize": "PageSize",
+        "page": "Default page",
+        "pageSize": "Page size",
         "pattern": "Pattern",
         "pending": "Pending",
         "placeholder": "Placeholder",
@@ -1760,7 +1774,8 @@
           "cell_selection": "Cell selection",
           "click_outside_to_des": "Click outside to deselect",
           "page": "Default page index",
-          "export_all_data_setting": "Export all"
+          "export_all_data_setting": "Export all",
+          "locale": "Locale"
         },
         "previous_cursor": "Previous cursor",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Enable users to resize",
         "enable_users_to_sort": "Enable users to sort",
         "disable_users_to_reorder": "Disable users to reorder columns",
-        "locale": "Locale",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Quick filter",
+        "exclude_hidden_columns": "Exclude hidden columns",
+        "allow_users_select": "Allow row selection"
       },
       "setter_tooltip": {
         "action": "Your actions to components trigger queries, control components, or call the data in your resources. Multiple async actions will be executed in parallel.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Set the sender avatar. For example, in your data source, the sender avatar is the sendAvatar field and you can set the field to {{item.sendAvatar}}.",
         "receiving": "Set whether to display loading when receiving messages. If your message is received from action1, you can set it to {{action1.isRunning}}, and the loading status will be displayed when action1 is running.",
         "export_setting": "Used to set whether or not users are allowed to export filtered data.",
-        "filter_setting": "Used to set whether or not to display filters, allowing users to filter data in the table."
+        "filter_setting": "Used to set whether or not to display filters, allowing users to filter data in the table.",
+        "quick_filter_setting": "Used to set whether to enable quick filter",
+        "exclude_hidden_columns": "Used to set whether to exlude the hidden columns when use quick filter. "
       },
       "tab_title": "Inspect",
       "unselected_tip1": "No components selected.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "Supported in the row single selection mode. After enabling it, click an area other than the table to unselect the row.",
           "density_setting": "Used to set the row height density or not. ",
           "refresh_setting": "Used to set whether to show a refresh icon",
-          "export_raw_data_setting": "Used to set whether or not users are allowed to export unfiltered raw data."
+          "export_raw_data_setting": "Used to set whether or not users are allowed to export unfiltered raw data.",
+          "locale": "For example, en-US"
         },
         "previous_cursor": "Use the action data to set the previous cursor. For example,  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Used to set a description of this column",
         "enable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. ",
         "disable_users_to_reorder": "Used to set whether or not disable users to reorder the columns",
-        "locale": "For example, en-US",
         "default_width": "Used to set the default width of the column",
-        "max_count": "Used to set the max count of stars"
+        "max_count": "Used to set the max count of stars",
+        "allow_users_select": "Used to set whether allow users to select row. "
       },
       "setter_option": {
         "fixed": "Fixed",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Preview window",
         "text-generation": "Preview window"
-      }
+      },
+      "validation_blank": {
+        "name": "Please enter a name",
+        "prompt": "Please enter the prompt",
+        "description": "Please enter the description",
+        "icon": "Please upload or generate an icon",
+        "variable_value": "Please ensure that both the key and value are either empty or not empty.",
+        "variable_key": "Please enter the key or delete the value. ",
+        "temperature": "Please enter the temperature between 0.1 to 2",
+        "max_token": "Please enter the max token not less than 1"
+      },
+      "length_invalid": {
+        "description": "Please limit the character count to 160 or less"
+      },
+      "value_invalid": {
+        "temperature": "Please enter the temperature between 0.1 to 2",
+        "max_token": "Please enter the max token not less than 1"
+      },
+      "group": {
+        "advanced_settings": "Advanced settings",
+        "information": "Basic information"
+      },
+      "doc": "Doc"
     },
     "common": {
       "required": "Required"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "No access permission"
-  }
+  },
+  "show_states": "Show states"
 }
