--- a/apps/builder/src/i18n/locale/ja-JP.json
+++ b/apps/builder/src/i18n/locale/ja-JP.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "認証"
-          }
+          },
+          "old_oracle": "9i 以下",
+          "new_oracle": "9i 以上"
         },
         "placeholder": {
           "url": "URL をここに入力",
@@ -1204,7 +1206,10 @@
           "placeholder": "{ count: 0 }"
         }
       },
-      "library": "Libraries"
+      "library": "ライブラリ",
+      "component_layer": {
+        "floating": "モーダル語"
+      }
     },
     "deploy": {
       "fail": "展開に失敗しました"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "メニュー項目を選択",
           "pageChange": "ページ変更",
           "clickItem": "アイテムをクリックします",
-          "columnVisibilityChange": "列の表示の変更"
+          "columnVisibilityChange": "列の表示の変更",
+          "onPaginationModelChange": "ページ変更",
+          "onRefresh": "更新",
+          "onFilterModelChange": "フィルタの変更",
+          "onRowSelectionModelChange": "行選択の変更",
+          "onColumnVisibilityModel": "列の表示の変更",
+          "onSortModelChange": "並べ替え変更"
         },
         "image_list": {
           "title": "イメージ",
@@ -1342,7 +1353,10 @@
         "refresh": "更新",
         "density_setting": "解像度:",
         "column_setting": "列",
-        "refresh_setting": "更新"
+        "refresh_setting": "更新",
+        "widget_action_type_naame": {
+          "onSortModelChange": "並べ替え変更"
+        }
       },
       "setter_default_value": {
         "fill": "充填",
@@ -1760,7 +1774,8 @@
           "cell_selection": "セルを選択",
           "click_outside_to_des": "外をクリックして選択を解除",
           "page": "既定のページインデックス",
-          "export_all_data_setting": "すべてエクスポート"
+          "export_all_data_setting": "すべてエクスポート",
+          "locale": "ロケール"
         },
         "previous_cursor": "前のカーソル",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "ユーザーのサイズ変更を有効にする",
         "enable_users_to_sort": "ユーザーの並び替えを有効にする",
         "disable_users_to_reorder": "列の並び替えを無効にする",
-        "locale": "ロケール",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "クイックフィルタ",
+        "exclude_hidden_columns": "非表示の列を除外",
+        "allow_users_select": "行の選択を許可"
       },
       "setter_tooltip": {
         "action": "コンポーネントに対するアクションは、クエリ、コンポーネントの操作、リソース内のデータの呼び出しなどのアクションをトリガーします。複数の非同期操作が並行して実行されます。",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "送信者アバターを設定します。 たとえば、データソースでは、送信者のアバターはsendAvatarフィールドで、 {{item.sendAvatar}}に設定できます。",
         "receiving": "メッセージの受信時に読み込みを表示するかどうかを設定します。 アクション1からメッセージを受信した場合は、 {{action1.isRunning}}に設定できます。 そしてロード状態は action1 が実行されているときに表示されます。",
         "export_setting": "フィルタリングされたデータをエクスポートできるかどうかを設定します。",
-        "filter_setting": "フィルターを表示するかどうかを設定するために使用します。"
+        "filter_setting": "フィルターを表示するかどうかを設定するために使用します。",
+        "quick_filter_setting": "クイックフィルターを有効にするかどうかの設定",
+        "exclude_hidden_columns": "クイックフィルターを使用するときに、隠し列を除外するかどうかを設定するために使用します。 "
       },
       "tab_title": "属性",
       "unselected_tip1": "コンポーネントが選択されていません。",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "行単一選択モードでサポートされています。有効にしたら、テーブル以外の領域をクリックして、行の選択を解除します。",
           "density_setting": "行の高さの密度を設定するかどうかに使用します。 ",
           "refresh_setting": "更新アイコンを表示するかどうかを設定するために使用",
-          "export_raw_data_setting": "フィルターされていない生データをエクスポートできるかどうかを設定します。"
+          "export_raw_data_setting": "フィルターされていない生データをエクスポートできるかどうかを設定します。",
+          "locale": "例: ja-JP"
         },
         "previous_cursor": "Actionデータを使用して、前のカーソルを設定します。例えば、  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "この列の説明を設定するために使用",
         "enable_users_to_sort": "この列の並べ替えを変更するかどうかを設定します。 ",
         "disable_users_to_reorder": "列の順序を変更するためにユーザーを無効にするかどうかを設定するために使用",
-        "locale": "例: ja-JP",
         "default_width": "列の既定の幅を設定するために使用",
-        "max_count": "星の最大数を設定するために使用"
+        "max_count": "星の最大数を設定するために使用",
+        "allow_users_select": "ユーザーが行を選択できるかどうかを設定するために使用します。 "
       },
       "setter_option": {
         "fixed": "固定高さ",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "チャット",
         "text-generation": "テキストの生成"
-      }
+      },
+      "validation_blank": {
+        "name": "名前を入力してください",
+        "prompt": "プロンプトを入力してください",
+        "description": "説明を入力してください",
+        "icon": "アイコンをアップロードまたは生成してください",
+        "variable_value": "キーと値の両方が空かどうかを確認してください。",
+        "variable_key": "キーを入力するか、値を削除してください。 ",
+        "temperature": "0.1から2までの温度を入力してください",
+        "max_token": "最大トークンを1未満で入力してください"
+      },
+      "length_invalid": {
+        "description": "キャラクター数を 160 以下に制限してください"
+      },
+      "value_invalid": {
+        "temperature": "0.1から2までの温度を入力してください",
+        "max_token": "最大トークンを1未満で入力してください"
+      },
+      "group": {
+        "advanced_settings": "詳細設定",
+        "information": "基本情報"
+      },
+      "doc": "Doc"
     },
     "common": {
       "required": "必須"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "アクセス権限がありません"
-  }
+  },
+  "show_states": "州を表示"
 }
