--- a/apps/builder/src/i18n/locale/ko-KR.json
+++ b/apps/builder/src/i18n/locale/ko-KR.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "입증"
-          }
+          },
+          "old_oracle": "9i or below",
+          "new_oracle": "9i above"
         },
         "placeholder": {
           "url": "여기에 요청 URL 입력",
@@ -1204,7 +1206,10 @@
           "placeholder": "{ count: 0 }"
         }
       },
-      "library": "Libraries"
+      "library": "Libraries",
+      "component_layer": {
+        "floating": "Modal"
+      }
     },
     "deploy": {
       "fail": "배포 실패"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Select menu item",
           "pageChange": "Page change",
           "clickItem": "Click item",
-          "columnVisibilityChange": "Column visibility change"
+          "columnVisibilityChange": "Column visibility change",
+          "onPaginationModelChange": "Page change",
+          "onRefresh": "Refresh",
+          "onFilterModelChange": "Filter change",
+          "onRowSelectionModelChange": "Row selection change",
+          "onColumnVisibilityModel": "Column visibility change",
+          "onSortModelChange": "Sort change"
         },
         "image_list": {
           "title": "이미지",
@@ -1342,7 +1353,10 @@
         "refresh": "Refresh",
         "density_setting": "Density",
         "column_setting": "Columns",
-        "refresh_setting": "Refresh"
+        "refresh_setting": "Refresh",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Sort change"
+        }
       },
       "setter_default_value": {
         "fill": "충전재",
@@ -1760,7 +1774,8 @@
           "cell_selection": "셀 선택",
           "click_outside_to_des": "바깥쪽을 클릭하여 선택 해제",
           "page": "Default page index",
-          "export_all_data_setting": "Export all"
+          "export_all_data_setting": "Export all",
+          "locale": "Locale"
         },
         "previous_cursor": "이전 커서",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Enable users to resize",
         "enable_users_to_sort": "Enable users to sort",
         "disable_users_to_reorder": "Disable users to reorder columns",
-        "locale": "Locale",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Quick filter",
+        "exclude_hidden_columns": "Exclude hidden columns",
+        "allow_users_select": "Allow row selection"
       },
       "setter_tooltip": {
         "action": "구성 요소에 대한 작업은 쿼리, 구성 요소 조작 또는 리소스의 데이터 호출과 같은 작업을 트리거합니다. 여러 비동기 작업이 병렬로 실행됩니다.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Set the sender avatar. For example, in your data source, the sender avatar is the sendAvatar field and you can set the field to {{item.sendAvatar}}.",
         "receiving": "Set whether to display loading when receiving messages. If your message is received from action1, you can set it to {{action1.isRunning}}, and the loading status will be displayed when action1 is running.",
         "export_setting": "Used to set whether or not users are allowed to export filtered data.",
-        "filter_setting": "Used to set whether or not to display filters, allowing users to filter data in the table."
+        "filter_setting": "Used to set whether or not to display filters, allowing users to filter data in the table.",
+        "quick_filter_setting": "Used to set whether to enable quick filter",
+        "exclude_hidden_columns": "Used to set whether to exlude the hidden columns when use quick filter. "
       },
       "tab_title": "속성",
       "unselected_tip1": "구성 요소가 선택되지 않았습니다.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "행 단일 선택 모드에서 지원됩니다. 활성화 후 표 이외의 영역을 클릭하면 행 선택이 해제됩니다.",
           "density_setting": "Used to set the row height density or not. ",
           "refresh_setting": "Used to set whether to show a refresh icon",
-          "export_raw_data_setting": "Used to set whether or not users are allowed to export unfiltered raw data."
+          "export_raw_data_setting": "Used to set whether or not users are allowed to export unfiltered raw data.",
+          "locale": "For example, en-US"
         },
         "previous_cursor": "액션 데이터를 사용하여 이전 커서를 설정합니다. 예: {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Used to set a description of this column",
         "enable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. ",
         "disable_users_to_reorder": "Used to set whether or not disable users to reorder the columns",
-        "locale": "For example, en-US",
         "default_width": "Used to set the default width of the column",
-        "max_count": "Used to set the max count of stars"
+        "max_count": "Used to set the max count of stars",
+        "allow_users_select": "Used to set whether allow users to select row. "
       },
       "setter_option": {
         "fixed": "고정 높이",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Chat",
         "text-generation": "Text generation"
-      }
+      },
+      "validation_blank": {
+        "name": "Please enter a name",
+        "prompt": "Please enter the prompt",
+        "description": "Please enter the description",
+        "icon": "Please upload or generate an icon",
+        "variable_value": "Please ensure that both the key and value are either empty or not empty.",
+        "variable_key": "Please enter the key or delete the value. ",
+        "temperature": "Please enter the temperature between 0.1 to 2",
+        "max_token": "Please enter the max token not less than 1"
+      },
+      "length_invalid": {
+        "description": "Please limit the character count to 160 or less"
+      },
+      "value_invalid": {
+        "temperature": "Please enter the temperature between 0.1 to 2",
+        "max_token": "Please enter the max token not less than 1"
+      },
+      "group": {
+        "advanced_settings": "Advanced settings",
+        "information": "Basic information"
+      },
+      "doc": "Doc"
     },
     "common": {
       "required": "Required"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "No access permission"
-  }
+  },
+  "show_states": "Show states"
 }
