--- a/apps/builder/src/i18n/locale/no-NO.json
+++ b/apps/builder/src/i18n/locale/no-NO.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "Autentisering"
-          }
+          },
+          "old_oracle": "9i eller under",
+          "new_oracle": "9i over"
         },
         "placeholder": {
           "url": "Skriv inn forespørselens URL her",
@@ -1204,7 +1206,10 @@
           "placeholder": "{{ { count: 0 }}}"
         }
       },
-      "library": "Libraries"
+      "library": "Biblioteker",
+      "component_layer": {
+        "floating": "Modell"
+      }
     },
     "deploy": {
       "fail": "Kunne ikke distribuere"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Velg menypunkt",
           "pageChange": "Side endring",
           "clickItem": "Klikk pÃ¥ element",
-          "columnVisibilityChange": "Kolonne synlighet endring"
+          "columnVisibilityChange": "Kolonne synlighet endring",
+          "onPaginationModelChange": "Side endring",
+          "onRefresh": "Oppdater",
+          "onFilterModelChange": "Endre filter",
+          "onRowSelectionModelChange": "Endring av radutvalg",
+          "onColumnVisibilityModel": "Kolonne synlighet endring",
+          "onSortModelChange": "Endre sortering"
         },
         "image_list": {
           "title": "Bilder",
@@ -1342,7 +1353,10 @@
         "refresh": "oppdater",
         "density_setting": "Tetthet",
         "column_setting": "Kolonner",
-        "refresh_setting": "Oppdater"
+        "refresh_setting": "Oppdater",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Endre sortering"
+        }
       },
       "setter_default_value": {
         "fill": "Fyll",
@@ -1760,7 +1774,8 @@
           "cell_selection": "Valg av celle",
           "click_outside_to_des": "Klikk utenfor for å fjerne",
           "page": "Standard sideindeks",
-          "export_all_data_setting": "Eksporter alt"
+          "export_all_data_setting": "Eksporter alt",
+          "locale": "Språk"
         },
         "previous_cursor": "Forrige markør",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Tillat brukere å endre størrelse",
         "enable_users_to_sort": "Tillat brukere å sortere",
         "disable_users_to_reorder": "Deaktiver brukere for å endre rekkefølgen av kolonner",
-        "locale": "Språk",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Raskt filter",
+        "exclude_hidden_columns": "Ekskluder skjulte kolonner",
+        "allow_users_select": "Tillat radmarkering"
       },
       "setter_tooltip": {
         "action": "Handlinger for komponenter utløser spørringer, kontroller eller ringe data i ressursene dine. Flere async handlinger vil utføres parallelt.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Angi avsenderens profilbilde. For eksempel, i datakilden, er avsender avataren et sendAvatar felt, og du kan sette feltet til {{item.sendAvatar}}.",
         "receiving": "Angi om du vil vise lasting når du mottar meldinger. (Automatic Translation) Hvis meldingen mottas fra handling, kan du sette den til {{action1.isRunning}}, og lastestatusen vil vises når action1 kjører.",
         "export_setting": "Brukes til å angi om brukere har lov til å eksportere filtrerte data.",
-        "filter_setting": "Brukes til å angi om du skal vise filtre, tillater brukere å filtrere data i tabellen."
+        "filter_setting": "Brukes til å angi om du skal vise filtre, tillater brukere å filtrere data i tabellen.",
+        "quick_filter_setting": "Brukes for å angi om det skal aktiveres hurtigfilter",
+        "exclude_hidden_columns": "Brukes til å angi om de gjemte kolonnene skal fjernes når du bruker hurtigfilter. "
       },
       "tab_title": "Undersøk",
       "unselected_tip1": "Ingen komponenter er valgt.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "Støttet kun i radens valgmodus. Etter aktivering kan du klikke på et annet område enn tabellen for å fjerne raden.",
           "density_setting": "Brukes til å angi radens høydetetthet eller ikke. ",
           "refresh_setting": "Brukes til å angi om du vil vise et oppdateringsikon",
-          "export_raw_data_setting": "Brukes til å angi om brukere har lov til å eksportere ufiltrerte rådata."
+          "export_raw_data_setting": "Brukes til å angi om brukere har lov til å eksportere ufiltrerte rådata.",
+          "locale": "For eksempel nb-NO"
         },
         "previous_cursor": "Bruk handlingsdataene til å angi forrige kursor. For eksempel,  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Brukes til å angi en beskrivelse av denne kolonnen",
         "enable_users_to_sort": "Brukes til å angi om brukerne skal endre sorteringen av denne kolonnen eller ikke. ",
         "disable_users_to_reorder": "Brukes til å angi om eller ikke deaktivere brukere for å reorganisere kolonner",
-        "locale": "For eksempel nb-NO",
         "default_width": "Brukt til å angi standard bredde i kolonnen",
-        "max_count": "Brukes til å angi maks antall stjerner"
+        "max_count": "Brukes til å angi maks antall stjerner",
+        "allow_users_select": "Brukes til å angi om tillate brukere å velge rad. "
       },
       "setter_option": {
         "fixed": "Fast",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Samtale",
         "text-generation": "Generering av tekst"
-      }
+      },
+      "validation_blank": {
+        "name": "Vennligst skriv inn et navn",
+        "prompt": "Vennligst skriv inn ledeteksten",
+        "description": "Vennligst skriv inn beskrivelsen",
+        "icon": "Vennligst last opp eller generere et ikon",
+        "variable_value": "Vennligst forsikre deg om at både nøkkelen og verdien er tom eller ikke tom.",
+        "variable_key": "Skriv inn nøkkelen eller slett verdien. ",
+        "temperature": "Angi temperaturen mellom 0,1 og 2",
+        "max_token": "Vennligst skriv inn maks token ikke mindre enn 1"
+      },
+      "length_invalid": {
+        "description": "Du må begrense antall tegn til 160 eller mindre."
+      },
+      "value_invalid": {
+        "temperature": "Angi temperaturen mellom 0,1 og 2",
+        "max_token": "Vennligst skriv inn maks token ikke mindre enn 1"
+      },
+      "group": {
+        "advanced_settings": "Avanserte innstillinger",
+        "information": "Grunnleggende informasjon"
+      },
+      "doc": "Doc"
     },
     "common": {
       "required": "Påkrevd"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "Ingen tilgang"
-  }
+  },
+  "show_states": "Vis tilstander"
 }
