--- a/apps/builder/src/i18n/locale/ro-RO.json
+++ b/apps/builder/src/i18n/locale/ro-RO.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "Autentificare"
-          }
+          },
+          "old_oracle": "9i sau mai puțin",
+          "new_oracle": "9i peste"
         },
         "placeholder": {
           "url": "Introduceți aici URL-ul solicitării",
@@ -1204,7 +1206,10 @@
           "placeholder": "{{ { count: 0 }}}"
         }
       },
-      "library": "Libraries"
+      "library": "Biblioteci",
+      "component_layer": {
+        "floating": "Modale"
+      }
     },
     "deploy": {
       "fail": "Lansarea a eșuat"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Selectați elementul de meniu",
           "pageChange": "Modificare pagină",
           "clickItem": "Elementul clic",
-          "columnVisibilityChange": "Schimbare vizibilitate coloană"
+          "columnVisibilityChange": "Schimbare vizibilitate coloană",
+          "onPaginationModelChange": "Modificare pagină",
+          "onRefresh": "Împrospătează",
+          "onFilterModelChange": "Modificare filtru",
+          "onRowSelectionModelChange": "Modificare selecţie rând",
+          "onColumnVisibilityModel": "Schimbare vizibilitate coloană",
+          "onSortModelChange": "Modificare de sortare"
         },
         "image_list": {
           "title": "Imagini",
@@ -1342,7 +1353,10 @@
         "refresh": "Reîmprospătare",
         "density_setting": "Densitate",
         "column_setting": "Coloane",
-        "refresh_setting": "Împrospătează"
+        "refresh_setting": "Împrospătează",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Modificare de sortare"
+        }
       },
       "setter_default_value": {
         "fill": "Completează",
@@ -1760,7 +1774,8 @@
           "cell_selection": "Selecție celulă",
           "click_outside_to_des": "Click afară pentru a deselecta",
           "page": "Indexul implicit al paginii",
-          "export_all_data_setting": "Exportă tot"
+          "export_all_data_setting": "Exportă tot",
+          "locale": "Localizare"
         },
         "previous_cursor": "Cursor anterior",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Permite utilizatorilor să redimensioneze",
         "enable_users_to_sort": "Permite utilizatorilor să sorteze",
         "disable_users_to_reorder": "Dezactivează utilizatorii pentru a reordona coloanele",
-        "locale": "Localizare",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Filtru rapid",
+        "exclude_hidden_columns": "Exclude coloanele ascunse",
+        "allow_users_select": "Permite selecția rândului"
       },
       "setter_tooltip": {
         "action": "Acțiunile dvs pentru a declanșa interogări, a controla componente sau a apela datele din resursele dvs. Acțiuni multiple async vor fi executate în paralel.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Setează avatarul expeditorului. De exemplu, în sursa de date, avatarul expeditorului este câmpul sendAvatar și puteți seta câmpul {{item.sendAvatar}}.",
         "receiving": "Setați dacă se afișează încărcarea la primirea mesajelor. Dacă mesajul tău este primit de la acțiune1, îl poți seta la {{action1.isRunning}}, iar starea de încărcare va fi afișată când se execută acțiunea1.",
         "export_setting": "Folosit pentru a seta dacă utilizatorilor li se permite sau nu să exporte date filtrate.",
-        "filter_setting": "Folosit pentru a seta dacă să afișeze sau nu filtre, permițând utilizatorilor să filtreze datele în tabel."
+        "filter_setting": "Folosit pentru a seta dacă să afișeze sau nu filtre, permițând utilizatorilor să filtreze datele în tabel.",
+        "quick_filter_setting": "Folosit pentru a seta dacă se activează filtrul rapid",
+        "exclude_hidden_columns": "Folosit pentru a seta dacă să exluze coloanele ascunse atunci când utilizați un filtru rapid. "
       },
       "tab_title": "Inspectează",
       "unselected_tip1": "Nicio componentă selectată.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "Acceptat în modul de selecţie simplă a rândului. După activare, faceţi clic pe o altă zonă decât tabelul pentru a dezselecta rândul.",
           "density_setting": "Folosit pentru a seta densitatea de înălţime a rândului. ",
           "refresh_setting": "Folosit pentru a seta dacă se afișează o pictogramă de reîmprospătare",
-          "export_raw_data_setting": "Folosit pentru a seta dacă utilizatorilor li se permite sau nu să exporte date brute nefiltrate."
+          "export_raw_data_setting": "Folosit pentru a seta dacă utilizatorilor li se permite sau nu să exporte date brute nefiltrate.",
+          "locale": "De exemplu, ro-RO"
         },
         "previous_cursor": "Folosește datele acțiunii pentru a seta cursorul anterior. De exemplu,  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Folosit pentru a seta o descriere a acestei coloane",
         "enable_users_to_sort": "Folosit pentru a seta dacă permite sau nu utilizatorilor să modifice sortarea acestei coloane. ",
         "disable_users_to_reorder": "Folosit pentru a seta dacă dezactivează sau nu utilizatorii pentru a reordona coloanele",
-        "locale": "De exemplu, ro-RO",
         "default_width": "Folosit pentru a seta lățimea implicită a coloanei",
-        "max_count": "Folosit pentru a seta numărul maxim de stele"
+        "max_count": "Folosit pentru a seta numărul maxim de stele",
+        "allow_users_select": "Folosit pentru a seta dacă permite utilizatorilor să selecteze rândul. "
       },
       "setter_option": {
         "fixed": "Fixat",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Chat",
         "text-generation": "Generare text"
-      }
+      },
+      "validation_blank": {
+        "name": "Te rugăm să introduci un nume",
+        "prompt": "Vă rugăm să introduceţi solicitarea",
+        "description": "Vă rugăm să introduceţi descrierea",
+        "icon": "Vă rugăm să încărcați sau să generați o pictogramă",
+        "variable_value": "Asigurați-vă că atât cheia cât și valoarea sunt goale sau nu sunt goale.",
+        "variable_key": "Vă rugăm să introduceți cheia sau ștergeți valoarea. ",
+        "temperature": "Introduceți temperatura între 0,1 și 2",
+        "max_token": "Vă rugăm să introduceți token-ul maxim cel puțin 1"
+      },
+      "length_invalid": {
+        "description": "Vă rugăm să limitați numărul de caractere la 160 sau mai puțin"
+      },
+      "value_invalid": {
+        "temperature": "Introduceți temperatura între 0,1 și 2",
+        "max_token": "Vă rugăm să introduceți token-ul maxim cel puțin 1"
+      },
+      "group": {
+        "advanced_settings": "Setări avansate",
+        "information": "Informatii de baza"
+      },
+      "doc": "Document"
     },
     "common": {
       "required": "Necesar"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "Fără permisiune de acces"
-  }
+  },
+  "show_states": "Arată județele"
 }
