--- a/apps/builder/src/i18n/locale/uk-UA.json
+++ b/apps/builder/src/i18n/locale/uk-UA.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "Автентифікація"
-          }
+          },
+          "old_oracle": "9i or below",
+          "new_oracle": "9i above"
         },
         "placeholder": {
           "url": "Введіть URL запит",
@@ -1204,7 +1206,10 @@
           "placeholder": "{{ { count: 0 }}}"
         }
       },
-      "library": "Libraries"
+      "library": "Libraries",
+      "component_layer": {
+        "floating": "Modal"
+      }
     },
     "deploy": {
       "fail": "Не вдалося розгорнути"
@@ -1314,7 +1319,13 @@
           "on_menu_select": "Виберіть пункт меню",
           "pageChange": "Зміна сторінки",
           "clickItem": "Натиснути предмет",
-          "columnVisibilityChange": "Column visibility change"
+          "columnVisibilityChange": "Column visibility change",
+          "onPaginationModelChange": "Page change",
+          "onRefresh": "Refresh",
+          "onFilterModelChange": "Filter change",
+          "onRowSelectionModelChange": "Row selection change",
+          "onColumnVisibilityModel": "Column visibility change",
+          "onSortModelChange": "Sort change"
         },
         "image_list": {
           "title": "Малюнки",
@@ -1342,7 +1353,10 @@
         "refresh": "оновити",
         "density_setting": "Density",
         "column_setting": "Columns",
-        "refresh_setting": "Refresh"
+        "refresh_setting": "Refresh",
+        "widget_action_type_naame": {
+          "onSortModelChange": "Sort change"
+        }
       },
       "setter_default_value": {
         "fill": "Заливка рядка",
@@ -1760,7 +1774,8 @@
           "cell_selection": "Вибір клітинки",
           "click_outside_to_des": "Натисніть на вулицю, щоб зняти виділення",
           "page": "Default page index",
-          "export_all_data_setting": "Export all"
+          "export_all_data_setting": "Export all",
+          "locale": "Locale"
         },
         "previous_cursor": "Попередній курсор",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Enable users to resize",
         "enable_users_to_sort": "Enable users to sort",
         "disable_users_to_reorder": "Disable users to reorder columns",
-        "locale": "Locale",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "Quick filter",
+        "exclude_hidden_columns": "Exclude hidden columns",
+        "allow_users_select": "Allow row selection"
       },
       "setter_tooltip": {
         "action": "Ваші дії до компонентів тригерують запити, керуючі компоненти, або викликайте дані у ваших ресурсах. Декілька дій асингу буде виконано паралельно.",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "Встановіть аватар. Наприклад, у вашому джерелі даних аватар відправник - це поле відправника \"Аватар\", і ви можете встановити поле {{item.sendAvatar}}.",
         "receiving": "Виберіть, чи показувати завантаження при отриманні повідомлень. Якщо ваше повідомлення отримано від дії 1, ви можете встановити його в {{action1.isRunning}}, і статус завантаження буде відображений при запуску action1.",
         "export_setting": "Used to set whether or not users are allowed to export filtered data.",
-        "filter_setting": "Used to set whether or not to display filters, allowing users to filter data in the table."
+        "filter_setting": "Used to set whether or not to display filters, allowing users to filter data in the table.",
+        "quick_filter_setting": "Used to set whether to enable quick filter",
+        "exclude_hidden_columns": "Used to set whether to exlude the hidden columns when use quick filter. "
       },
       "tab_title": "Оглянути",
       "unselected_tip1": "Немає вибраних компонентів.",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "Підтримується в режимі одного вибору рядка. Після увімкнення натисніть область поза таблицею, щоб зняти виділення з рядка.",
           "density_setting": "Used to set the row height density or not. ",
           "refresh_setting": "Used to set whether to show a refresh icon",
-          "export_raw_data_setting": "Used to set whether or not users are allowed to export unfiltered raw data."
+          "export_raw_data_setting": "Used to set whether or not users are allowed to export unfiltered raw data.",
+          "locale": "For example, en-US"
         },
         "previous_cursor": "Використовуйте дані дій, щоб встановити попередній курсор. Наприклад,  {{ pageInfo.startCursor }}",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "Used to set a description of this column",
         "enable_users_to_sort": "Used to set whether or not allow users to change the sorting of this column. ",
         "disable_users_to_reorder": "Used to set whether or not disable users to reorder the columns",
-        "locale": "For example, en-US",
         "default_width": "Used to set the default width of the column",
-        "max_count": "Used to set the max count of stars"
+        "max_count": "Used to set the max count of stars",
+        "allow_users_select": "Used to set whether allow users to select row. "
       },
       "setter_option": {
         "fixed": "Виправлена",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "Чат",
         "text-generation": "Генерація тексту"
-      }
+      },
+      "validation_blank": {
+        "name": "Please enter a name",
+        "prompt": "Please enter the prompt",
+        "description": "Please enter the description",
+        "icon": "Please upload or generate an icon",
+        "variable_value": "Please ensure that both the key and value are either empty or not empty.",
+        "variable_key": "Please enter the key or delete the value. ",
+        "temperature": "Please enter the temperature between 0.1 to 2",
+        "max_token": "Please enter the max token not less than 1"
+      },
+      "length_invalid": {
+        "description": "Please limit the character count to 160 or less"
+      },
+      "value_invalid": {
+        "temperature": "Please enter the temperature between 0.1 to 2",
+        "max_token": "Please enter the max token not less than 1"
+      },
+      "group": {
+        "advanced_settings": "Advanced settings",
+        "information": "Basic information"
+      },
+      "doc": "Doc"
     },
     "common": {
       "required": "Обов'язково"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "Немає дозволу на доступ"
-  }
+  },
+  "show_states": "Show states"
 }
