--- a/apps/builder/src/i18n/locale/zh-CN.json
+++ b/apps/builder/src/i18n/locale/zh-CN.json
@@ -249,7 +249,9 @@
           },
           "airtable": {
             "authentication": "认证"
-          }
+          },
+          "old_oracle": "9i及以下版本",
+          "new_oracle": "9i以上版本"
         },
         "placeholder": {
           "url": "在此处输入请求 URL",
@@ -1204,7 +1206,10 @@
           "placeholder": "{ count: 0 }"
         }
       },
-      "library": "库"
+      "library": "库",
+      "component_layer": {
+        "floating": "模态框"
+      }
     },
     "deploy": {
       "fail": "部署失败"
@@ -1280,13 +1285,13 @@
           "change": "内容改变",
           "click": "单击",
           "clickMenuItem": "单击",
-          "columnFiltersChange": "行筛选改变",
+          "columnFiltersChange": "过滤器变更",
           "fail": "失败后",
           "focus": "聚焦",
           "invalid": "校验失败",
-          "paginationChange": "翻页配置改变",
-          "row_select": "选择行",
-          "sortingChange": "排序方式改变",
+          "paginationChange": "页面变更",
+          "row_select": "行选择变更",
+          "sortingChange": "排序方式变更",
           "submit": "提交",
           "success": "成功后",
           "onOpenModal": "打开对话框",
@@ -1295,14 +1300,14 @@
           "pause": "暂停",
           "ended": "已结束",
           "loaded": "已载入",
-          "rowSelect": "选择行",
+          "rowSelect": "行选择变更",
           "markerSelected": "选中点",
           "markerCreated": "创建点",
           "select": "选择",
           "DragOrClickNoEventArea": "拖拽或点击无事件区域",
           "rowClick": "点击行",
           "refresh": "刷新",
-          "filtersChange": "行筛选改变",
+          "filtersChange": "过滤器变更",
           "rowSelectChange": "行选择变更",
           "onCellSelect": "选中单元格",
           "delete": "删除",
@@ -1312,9 +1317,15 @@
           "uploadFailed": "上传失败",
           "onMenuSelect": "选中菜单项",
           "on_menu_select": "选择菜单项",
-          "pageChange": "页面更改",
+          "pageChange": "页面变更",
           "clickItem": "点击项目",
-          "columnVisibilityChange": "变更列是否可见"
+          "columnVisibilityChange": "列是否可见变更",
+          "onPaginationModelChange": "页面变更",
+          "onRefresh": "刷新",
+          "onFilterModelChange": "过滤器变更",
+          "onRowSelectionModelChange": "行选择变更",
+          "onColumnVisibilityModel": "列是否可见变更",
+          "onSortModelChange": "排序方式变更"
         },
         "image_list": {
           "title": "图片",
@@ -1342,7 +1353,10 @@
         "refresh": "刷新",
         "density_setting": "行密集显示",
         "column_setting": "列设置",
-        "refresh_setting": "刷新"
+        "refresh_setting": "刷新",
+        "widget_action_type_naame": {
+          "onSortModelChange": "排序方式变更"
+        }
       },
       "setter_default_value": {
         "fill": "填充",
@@ -1543,7 +1557,7 @@
         "new_tab": "在新标签中打开",
         "only_run_when": "先决条件",
         "overFlow": "翻页方式",
-        "page": "页面",
+        "page": "默认页面",
         "pageSize": "每页行数",
         "pattern": "模式",
         "pending": "待处理节点",
@@ -1760,7 +1774,8 @@
           "cell_selection": "选中单元格",
           "click_outside_to_des": "点击外部取消选择",
           "page": "默认页面索引",
-          "export_all_data_setting": "导出全部"
+          "export_all_data_setting": "导出全部",
+          "locale": "本地化"
         },
         "previous_cursor": "上一光标",
         "input": {
@@ -1870,8 +1885,10 @@
         "enable_users_to_resize": "Enable users to resize",
         "enable_users_to_sort": "允许用户排序",
         "disable_users_to_reorder": "禁止用户调整列排序",
-        "locale": "本地化",
-        "default_width": "Default width"
+        "default_width": "Default width",
+        "quick_filter_setting": "快速筛选",
+        "exclude_hidden_columns": "不包含隐藏列",
+        "allow_users_select": "允许选中行"
       },
       "setter_tooltip": {
         "action": "您对组件的操作会触发查询、控制组件或调用资源中的数据等操作。多个异步操作将并行执行。",
@@ -1934,7 +1951,9 @@
         "senderAvatar": "设置发送方头像。 例如，在您的数据源中，发送者头像是 sendAvatar 字段，您可以将字段设置为 {{item.sendAvatar}}。",
         "receiving": "设置接收消息时是否显示加载。 如果您的消息是从action1收到的，您可以将其设置为 {{action1.isRunning}}， action1运行时将显示加载状态。",
         "export_setting": "用于设置是否允许用户导出筛选后的数据",
-        "filter_setting": "用于设置是否展示筛选器，允许用户筛选数据"
+        "filter_setting": "用于设置是否展示筛选器，允许用户筛选数据",
+        "quick_filter_setting": "用于设置是否启用快速筛选",
+        "exclude_hidden_columns": "用于设置是否在快速筛选时不包含隐藏列"
       },
       "tab_title": "属性",
       "unselected_tip1": "没有组件被选中。",
@@ -2087,7 +2106,8 @@
           "supported_in_the_row": "在行单选模式下支持。启用后，点击表以外的区域取消选择。",
           "density_setting": "用于设置行高密集与否",
           "refresh_setting": "用于设置是否展示刷新按钮",
-          "export_raw_data_setting": "用于设置是否允许用户导出未经筛选的原始数据"
+          "export_raw_data_setting": "用于设置是否允许用户导出未经筛选的原始数据",
+          "locale": "例如，en-US"
         },
         "previous_cursor": "使用动作的数据来设置上一个光标。例如，  {{ pageInfo.startCursor }} ",
         "input": {
@@ -2172,9 +2192,9 @@
         "column_description": "用于设置这列的描述信息",
         "enable_users_to_sort": "用于设置是否允许用户更改排序",
         "disable_users_to_reorder": "用于设置是否禁止用户调整列排序",
-        "locale": "例如，en-US",
         "default_width": "Used to set the default width of the column",
-        "max_count": "用于设置星星的最大数量"
+        "max_count": "用于设置星星的最大数量",
+        "allow_users_select": "用于设置是否允许用户选中行. "
       },
       "setter_option": {
         "fixed": "固定高度",
@@ -2774,7 +2794,29 @@
       "title-preview": {
         "chat": "运行结果预览",
         "text-generation": "运行结果预览"
-      }
+      },
+      "validation_blank": {
+        "name": "请输入名称",
+        "prompt": "请输入Prompt",
+        "description": "请输入描述",
+        "icon": "请上传或生成icon",
+        "variable_value": "请确保key和value都为空或都不为空",
+        "variable_key": "请输入key或删除值",
+        "temperature": "请输入temperature，值在0.1到2之间",
+        "max_token": "请输入max token，值不小于1"
+      },
+      "length_invalid": {
+        "description": "请将字符数量限制在160以内"
+      },
+      "value_invalid": {
+        "temperature": "请输入temperature，值在0.1到2之间",
+        "max_token": "请输入max token，值不小于1"
+      },
+      "group": {
+        "advanced_settings": "高级设置",
+        "information": "基本信息"
+      },
+      "doc": "文档"
     },
     "common": {
       "required": "必填"
@@ -4461,5 +4503,6 @@
   },
   "error_page": {
     "fobidden": "没有访问权限"
-  }
+  },
+  "show_states": "Show states"
 }
